--- a/FrontEnd/css/styles.css
+++ b/FrontEnd/css/styles.css
@@ -4,15 +4,12 @@
   box-sizing: border-box;
 }
 
-html {
-  height: 100vh;
-}
-
 header {
   position: fixed;
   width: 100%;
   z-index: 2;
   top: 0;
+  height: 65px;
 }
 
 .header {
@@ -20,19 +17,20 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   background: #dddff7;
 }
 
 .header img {
-  width: 8%;
-  margin: 1rem 6rem;
+  width: 155px;
+  margin: 1rem 0 0 20px;
 }
 
 .header ul {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 0 6rem;
+  margin: 0 20px 0 0;
 }
 
 .header ul li {
@@ -54,6 +52,24 @@ header {
   margin-top: 160px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  padding: 2rem 4rem;
+  align-content: center;
+}
+
+.alta h2 {
+  color: #292e6e;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.alta .formulario {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  margin-bottom: 50px;
+}
+
+.alta .formulario input {
+  padding-left: 10px;
+  color: blue;
 }
