--- a/FrontEnd/css/styles.scss
+++ b/FrontEnd/css/styles.scss
@@ -1,58 +1,28 @@
-$colorPrincipal: #dddff7;
-$colorAridos: #292e6e;
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-html{
-    height: 100vh;
-}
-
-header{
-    position: fixed;
-    width: 100%;
-    z-index: 2;
-    top:0;
-}
-.header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background: $colorPrincipal;
-    img{
-        width: 8%;
-        margin: 1rem 6rem;
-        // padding: 10px;
-    }
-    
-    ul{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin: 0 6rem;
-        li{
-            list-style: none;
-            margin: 0 1rem;
-            a{
-                color: $colorAridos;
-                font-weight: 1rem;
-            }
-            .active{
-                text-decoration: underline;
-                font-weight: bold;
-            }
-        }
-    }
-}
-
+@import 'base';
+// INDEX
 .contenido{
     margin-top:160px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 2rem 4rem;
-    // background-color: blue;
+    align-content: center;
+}
+
+//ALTA DE USUARIO, GRUPOS
+.alta{
+    h2{
+        color: $colorAridos;
+        text-align: center;
+        margin-bottom: 40px;
+    }
+    .formulario{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        margin-bottom: 50px;
+        input{
+            padding-left: 10px;
+            color: blue;
+        }
+    }
 }
