--- a/FrontEnd/css/styles.scss
+++ b/FrontEnd/css/styles.scss
@@ -8,7 +8,7 @@
 }
 
 //ALTA DE USUARIO, GRUPOS
-.alta{
+.alta,  .grupo_seguridad{
     h2{
         color: $colorAridos;
         text-align: center;
